--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,106 @@
 <!doctype HTML>
 
-<html>
-    <head>
-    </head>
-    <body>
-        ASDF
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>WebGL Sandbox</title>
+
+    <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap-theme.css">
+    <script src="jquery/jquery-2.1.3.min.js"></script>
+    <script src="bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+    <script src="codemirror-5.0/lib/codemirror.js"></script>
+    <link rel="stylesheet" href="codemirror-5.0/lib/codemirror.css">
+    <script src="codemirror-5.0/mode/javascript/javascript.js"></script>
+    <style>
+      body { padding-top: 60px; }
+      .wad {
+        background-color: #FEB;
+        padding: 7px;
+      }
+      .wad h3 {
+        padding: 0;
+        margin-top: 0;
+        width: 100%;
+        text-align: center;
+        color: #000;
+      }
+
+      .wktNoSpin::-webkit-inner-spin-button, .wktNoSpin::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+
+      .inputWx {
+        display: inline-block;
+        box-sizing: border-box;
+        width: 3em;
+        height: 1.8em;
+        border: 1px solid #AAA;
+      }
+
+      #sizehr {
+        margin-bottom: 4px;
+        position: relative;
+        padding: 4px;
+        background-color: #ECECEC;
+      }
+
+      #resultborder {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 100%;
+        padding: inherit;
+      }
+
+      #result {
+        box-sizing: content-box;
+        border: 1px solid black;
+        height: 255px;
+        width: 255px;
+      }
+    </style>
+
+    <script src="main.js">
+    </script>
+
+  </head>
+  <body onload="main()" role="document">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <span class="navbar-brand" style="color: #AAA">WebGL Sandbox</span>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container" role="main">
+      <div class="row">
+        <div class="col-sm-12">
+          <h3>Result</h3>
+          <div id="sizehr">
+            size:
+            <input class="wktNoSpin inputWx" type="number" id="width" name="width" min="50" value="255">
+            x
+            <input class="wktNoSpin inputWx" type="number" id="height" name="height" min="50" value="255">
+            <div id="resultborder">
+              Result border: <input type="checkbox" id="border" name="border" checked="true">
+            </div>
+          </div>
+          <canvas id="result"></canvas>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 wad">
+          <h3>Javascript</h3>
+          <textarea id="yava-src"></textarea>
+        </div>
+        <div class="col-sm-6 wad">
+          <h3>GLSL</h3>
+          <textarea id="GLSL-src"></textarea>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
