Executable JS code per-frame!

--- a/src/index.html
+++ b/src/index.html
@@ -94,11 +94,17 @@
       <div class="row">
         <div class="col-sm-6 wad">
           <h3>Javascript</h3>
-          <textarea id="yava-src"></textarea>
+          <div id="yava-container">
+            <textarea id="yava-src"></textarea>
+          </div>
+          <div id="yava-anchor" style="margin-top: 4px;"></div>
         </div>
         <div class="col-sm-6 wad">
           <h3>GLSL</h3>
-          <textarea id="GLSL-src"></textarea>
+          <div id="GLSL-container">
+            <textarea id="GLSL-src"></textarea>
+          </div>
+          <div id="glsl-anchor" style="margin-top: 4px;"></div>
         </div>
       </div>
     </div>
