--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
     </script>
 
   </head>
-  <body onload="main()" role="document">
+  <body onload="mainFunction()" role="document">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -94,9 +94,11 @@
       <div class="row">
         <div class="col-sm-6 wad">
           <h3>Javascript</h3>
+          <code>function loop(gl, worldTime, frameCount) {</code>
           <div id="yava-container">
             <textarea id="yava-src"></textarea>
           </div>
+          <code>}</code>
           <div id="yava-anchor" style="margin-top: 4px;"></div>
         </div>
         <div class="col-sm-6 wad">
